@startuml schema
hide circle
skinparam linetype ortho


entity "building" as building {
  * id : INT <<PK>>
  --
  nome : VARCHAR(50) [UNIQUE]
  indirizzo : VARCHAR(255)
}

entity "room" as room {
  * id : INT <<PK>>
  --
  * building_id : INT <<FK>>
  nome : VARCHAR(50)
  piano : INT
  ..
  note: UNIQUE(building_id, nome)
}

entity "utente" as utente {
  * id : INT <<PK>>
  --
  nome_utente : VARCHAR(50) [UNIQUE]
  password : VARCHAR(255)
  ruolo : ENUM('studente', 'tecnico', 'admin')
}

entity "issue" as issue {
  * id : INT <<PK>>
  --
  * utente_id : INT <<FK>>
  * room_id : INT <<FK>>
  tecnico_id: INT <<FK>> [NULLABLE]
  titolo : VARCHAR(150)
  descrizione : TEXT
  data_apertura : TIMESTAMP
  data_chiusura : TIMESTAMP [NULLABLE]
  stato : ENUM('aperto', 'in lavorazione', 'chiuso')
  ..
  note: CHECK (data_chiusura >= data_apertura)  
}

entity "preferiti" as preferiti {
  * utente_id : INT <<PK, FK>>
  * room_id : INT <<PK, FK>>
  --
}

' Un building ha molte aule
building ||--o{ room : "contiene"

' Un utente (studente) crea molte segnalazioni
utente ||--o{ issue : "apre"

' Un utente (tecnico) prende in carico molte segnalazioni
utente |o--o{ issue : "risolve"

room ||--o{ issue : "riguarda"

utente ||--o{ preferiti
room ||--o{ preferiti

@enduml